<resources>
    <string name="app_name">Support</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_error">Error</string>
    <string name="msg_email_error">The email format is invalid</string>
    <string name="msg_password_error">Password is too short</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_enterprise_network">Enterprise\nNetwork</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_content_server_problem">Server error!</string>
    <string name="dialog_title_content_network_problem">No internet connection</string>
    <string name="click_back_again">Please click BACK again to exit</string>

    <string name="welcome_get_start">Let\'s get started with</string>
    <string name="welcome_signup_customer">Sign up as a customer</string>
    <string name="welcome_setup">Setup as a company</string>
    <string name="welcome_app_name_1">Enterprise</string>
    <string name="welcome_app_name_2">Network</string>
    <string name="welcome_have_account">You have an account already?</string>
    <string name="welcome_signin">Sign in</string>

    <!--String related to home main-->
    <string name="search">Search</string>
    <string name="prompt_number_sample">100</string>
    <string name="prompt_enterprises">enterprises</string>
    <string name="prompt_total_customers">Total customers</string>
    <string name="prompt_number_of_enterprises">Number of enterprises:</string>
    <string name="prompt_active_customers">Active customers</string>
    <string name="prompt_number_of_staffs">Number of staffs:</string>
    <string name="prompt_number_of_customers">Number of customers</string>
    <string name="prompt_total_online_time">Total online time</string>
    <string name="prompt_total_online_time_hours">Total online time (hours):</string>

    <!--String related to Online Enterprises-->
    <string name="online_enterprises">Online Enterprises</string>

    <!--string related to edit info-->
    <string name="title">Title:</string>
    <string name="first">First*:</string>
    <string name="middle">Middle:</string>
    <string name="last">Last*:</string>
    <string name="suffix">Suffix:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="country">Country:</string>
    <string name="street">Street</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="store_name">Store name</string>
    <string name="store_address">Store address</string>
    <string name="welcome_greeting">Welcome to Enterprise Network</string>
    <string name="sample_email">gemvietnam@gemvietnam.com</string>
    <string name="welcome_guide">Navigating Around the Enterprise Network</string>
    <string name="welcome_guide_2">Tap the icon on the button right corner\nto select a working module.</string>
    <string name="switch_account">switch Account</string>
    <string name="sample_username">Anh Quan</string>
    <string name="address_sample">62 Tran Thai Tong, Cau Giay, Ha Noi</string>
    <string name="assets">Assets</string>
    <string name="sample_address">62 Tran Thai Tong, Cau Giay</string>
    <string name="sample_phone">04888666</string>
    <string name="sample_number">0</string>
    <string name="stores">stores</string>
    <string name="product">products</string>
    <string name="list_product_images">list_product_images</string>
    <string name="value">Value</string>
    <string name="zero">0</string>
    <!--string related to login-->

    <string name="navigation_customer">Customer</string>
    <string name="default_picture">Default picture</string>

    <!--string related to graph-->

    <string name="graph_user">Users</string>
    <string name="graph_amount">Amount</string>

    <!-- navigation drawer-->
    <string name="nav_home">Home</string>
    <string name="nav_billing_support">Billing Support</string>
    <string name="nav_log_out">Log out</string>
    <string name="navigation_sale_bt">Sales</string>
    <string name="nav_other">Other</string>
    <string name="nav_feedback">Feedback</string>
    <string name="table_column1_title">No</string>
    <string name="table_column2_title">Product</string>
    <string name="table_column3_title">Time</string>
    <string name="table_column4_title">Status</string>
    <string name="bottom_progressbar_loading">Loading</string>
    <string name="prompt_billing">Billing in</string>
    <string name="sample_month">2016-03</string>
    <string name="all_income_header_company">Company</string>
    <string name="company_name_sample">GEM</string>
    <string name="sample_value">2 000</string>
    <string name="menu_no_users">No. Users</string>
    <string name="sample_fax">0123456789</string>
    <string name="sample_company">GemVietnam</string>
    <string name="all_income_header_amount">$</string>
    <string name="all_income_header_paid_date">Paid date</string>
    <string name="all_income_header_date">Date</string>

    <!-- list feedback-->
    <string name="deleted">DELETE</string>
    <string name="undo">UNDO</string>
    <!--/ Toolbar -->
    <string name="group_by_all">All</string>
    <string name="group_by_enterprise">Group by Enterprise</string>

    <string name="feedback">Feedback</string>


    <string name="total_amount">Total Amount:</string>
    <string name="sample_amount">12 000 000</string>
    <string name="start_time">Start Time:</string>
    <string name="sample_time">2016-01-01</string>
    <string name="sample_number_user">100</string>
    <string name="filter_user_by_all">All</string>
    <string name="increment_users">Increased Users</string>
    <string name="invariable_users">Invariable Users</string>
    <string name="decrement_users">Decreased Users</string>
    <string name="arrow_up">▲</string>
    <string name="arrow_down">▼</string>
    <string name="minus">━</string>

    <string name="device_info">Device Infomation</string>
    <string name="app_ver">App version: </string>
    <string name="os_type">OS type: </string>
    <string name="api_ver">API version: </string>
    <string name="model">Model: </string>
    <string name="brand">Brand: </string>

    <string name="companies_income">Companies Income</string>
    <string name="company_info">Company Info</string>

    <string name="home">home</string>
    <string name="work">work</string>
    <string name="billing">Billing</string>
    <string name="filter_select_all">All</string>
    <string name="filter_selected_all">All ▼</string>
    <string name="filter_selected_increased">Increased Users ▼</string>
    <string name="filter_selected_invariable">Invariable Users ▼</string>
    <string name="filter_selected_decreased">Decreased Users ▼</string>
    <string name="income">Income</string>

    <string name="address_demo">62 Tran Thai Tong, Cau Giay, Ha Noi, Viet Nam</string>
    <string name="phone_demo">+84(01673255990)</string>
    <string name="email_demo">hopnv@gemvietnam.com</string>
</resources>
