<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@mipmap/money"
            android:title="@string/nav_billing_support" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_feedback" />

    </group>
    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_log_out" />
        </menu>
    </item>

</menu>
