<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_company_bill_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_companies_menu_height"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/item_company_name_tv"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:singleLine="true"
            android:text="@string/company_name_sample"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_company_number_user_tv"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/padding_medium"
            android:singleLine="true"
            android:text="@string/sample_number_user"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_company_user_increment_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/arrow_up"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_company_number_user_increment_tv"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/padding_medium"
            android:singleLine="true"
            android:text="@string/sample_number_user"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_company_amount_tv"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/sample_amount"
            android:textColor="@color/black" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_break_height"
        android:background="@color/grey_500">

    </FrameLayout>
</LinearLayout>

