<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_global">


        <ImageView
            android:layout_width="@dimen/company_info_logo_w"
            android:layout_height="@dimen/company_info_logo_h"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/account_black" />

        <TextView
            android:id="@+id/company_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_company"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/company_info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:text="@string/sample_address"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/company_info_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:text="@string/sample_email"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/company_info_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:text="@string/sample_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</LinearLayout>