<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amount"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/company_bills_total_amount_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_amount"
                        android:textColor="@color/bg_tool_bar"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/company_bills_start_time_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_time"
                        android:textColor="@color/bg_tool_bar"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/company_bills_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_companies_menu_height"
                android:background="@color/green_600"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/all_income_header_paid_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="@dimen/padding_medium"
                    android:src="@mipmap/account_white" />

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/all_income_header_amount"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/company_bills_pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/company_bills_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

